# ISOMETRIC_VOXEL_ENGINE

./: .gitignore  CMakeLists.txt
assets/data/: blocks.json  game_assets.json
assets/shaders/: isometric.frag  isometric.vert
include/core/: Input.hpp  Window.hpp
include/glad/: glad.h
include/math/: NoiseMath.hpp
include/render/: Camera.hpp  ChunkMesher.hpp  ChunkRenderer.hpp  Mesh.hpp  Renderer.hpp  Shader.hpp  TextureManager.hpp  VoxelCoreRegistry.hpp
include/world/: BlockRegistry.hpp  Chunk.hpp  ChunkBuilder.hpp  FeatureDecorator.hpp  GameBlockRegistry.hpp  World.hpp  WorldDecorator.hpp  WorldDecoratorSystem.hpp  WorldGenerator.hpp
src/: glad.c  main.cpp
src/core/: Input.cpp  Window.cpp
src/math/: NoiseMath.cpp
src/render/: Camera.cpp  ChunkMesher.cpp  ChunkRenderer.cpp  Mesh.cpp  Primitives.hpp  Renderer.cpp  Shader.cpp  TextureManager.cpp  TextureManager.hpp
src/world/: BlockRegistry.cpp  ChunkBuilder.cpp  FeatureDecorator.cpp  GameBlockRegistry.cpp  World.cpp  WorldDecorator.cpp  WorldDecoratorSystem.cpp  WorldGenerator.cpp
